# ImageCoverter

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: README.md  make_example.py  square.md
src/img2dots/: __init__.py  __main__.py  cli.py  image.py  latex.py  output.py
tests/: test_cli.py  test_examples.py  test_image.py  test_latex.py  test_main.py  test_output.py
