[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "img2dots"
dynamic = ["version"]
description = "Convert an image into Markdown-embedded LaTeX \\rule dots."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
img2dots = "img2dots.cli:main"

[tool.hatch.version]
path = "src/img2dots/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/img2dots"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
