[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "img2dots"
dynamic = ["version"]
description = "Convert an image into Markdown-embedded LaTeX \\rule dots."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "Rene Knap", email = "rene.knap.92@googlemail.com"},
]
keywords = ["image", "latex", "markdown", "dots", "ascii-art", "cli", "converter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Utilities",
]
dependencies = [
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
img2dots = "img2dots.cli:main"

[tool.hatch.version]
path = "src/img2dots/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/img2dots"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["img2dots"]
branch = true
# The python -m entry shim runs only in a re-executed subprocess (see
# tests/test_main.py), so its lines never register as in-process coverage.
omit = ["*/img2dots/__main__.py"]

[tool.coverage.report]
fail_under = 100
show_missing = true
